test/assets/invalid/if/then-expect-int.hs
a :: Int
a = if True then [1] else 2